# ai-script-generator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CODE_QUALITY_UNIFIED.md  DATA_GOVERNANCE.md  DATA_GOVERNANCE_OPERATIONS_FINAL_REPORT.md  DATA_PROTECTION.md  DAY-0-LAUNCH-STATUS-REPORT.md  DEPLOYMENT.md  EPISODE_NUMBERING_ANALYSIS.md  EPISODE_NUMBERING_MONITORING.md  GITHUB_UPLOAD_CHECKLIST.md  GO-LIVE-STATUS-REPORT.md  IDEMPOTENCY_AND_RETRY_IMPLEMENTATION.md  OBSERVABILITY.md  OBSERVABILITY_IMPLEMENTATION.md  PRODUCTION_SSE_IMPLEMENTATION.md  README.md  REDIS_SECURITY.md  RELIABILITY_OBSERVABILITY_REPORT.md  ROLLBACK_PLAN.md  SECRETS_SECURITY.md  SECURITY_AUDIT_FINAL.md  SECURITY_BEST_PRACTICES.md  TYPE_SAFETY_SUMMARY.md  WEB_SECURITY.md  backup-recovery-procedures.md  backup_recovery_rehearsal_20250827_094052.json  basic-integration-test.py  day0-backup-recovery-rehearsal.py  day0-image-tagging.sh  day0-prometheus-alerts.yaml  docker-compose.prod.yml  docker-compose.yml  external-internet-sse-test.py  external_sse_test_results_20250827_094040.json  (+23 more)
frontend/: .env.example  .prettierrc  (+15 more)
services/generation-service/: .dockerignore  .env.example  .gitkeep  Dockerfile  README.md  SPECIALIZED_AGENTS_SUMMARY.md  SSE_IMPLEMENTATION.md  fix_python39_types.py  main.py  pyproject.toml  requirements.txt  sse_test.html  test_hybrid_api_e2e.py  test_integration_simple.py  test_langgraph_workflow.py  test_sse_integration.py
services/generation-service/.github/workflows/: ci.yml  performance-monitoring.yml  release.yml
services/generation-service/docker/: .env.example  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  health-check.sh  prometheus-prod.yml  prometheus.yml  redis-prod.conf  redis.conf
services/generation-service/docker/nginx/: nginx.conf
services/generation-service/docs/: api.md  database-url-defaults.md  deployment.md  installation.md  performance.md  provider-factory-lazy-loading.md  pydantic-v2-model-fields-fix.md  troubleshooting.md
services/generation-service/docs/api/: openapi.yaml
services/generation-service/scripts/: debug-async-methods.py  deployment-validation.sh  fix-import-fallbacks.py  run-all-tests.sh  simple-env-validator.py  strengthen-import-fallbacks.py  test-core-module-dependency.py  test-data-path-unification.py  test-database-url-defaults.py  test-docker-build.py  test-entrypoint-resolution.py  test-final-data-paths.py  test-pydantic-v2-compatibility.py  test-pydantic-v2-model-fields.py  test-service-startup.py  test-service-warnings.py  validate-async-processing.py  validate-data-models.py  validate-environment.py  validate-langgraph-workflow.py  validate-lazy-loading.py
services/generation-service/src/: __init__.py
services/generation-service/src/ai/: __init__.py
services/generation-service/src/ai/models/: __init__.py
services/generation-service/src/api/: __init__.py
services/generation-service/src/api/routers/: __init__.py  generation.py  rag.py  scripts.py
services/generation-service/src/config/: __init__.py
services/generation-service/src/database/: __init__.py  connection.py
services/generation-service/src/generation/: __init__.py
services/generation-service/src/generation_service/: __init__.py  config_loader.py  dependencies.py  main.py  py.typed
services/generation-service/src/generation_service/ai/: __init__.py
services/generation-service/src/generation_service/api/: __init__.py  agents.py  cache_endpoints.py  enhanced_generate.py  generate.py  health.py  idempotency_middleware.py  memory.py  metrics.py  monitoring_endpoints.py  performance_endpoints.py  rag.py  rag_durable.py  rag_pipeline.py  retry_endpoints.py  sse_generation.py
services/generation-service/src/generation_service/config/: __init__.py  agents_config.py  base_settings.py  environment_manager.py  performance_config.py  settings.py
services/generation-service/src/generation_service/core/: __init__.py  errors.py
services/generation-service/src/generation_service/database/: __init__.py  connection.py
services/generation-service/src/generation_service/logging/: __init__.py  debug_tools.py  performance_tracer.py  structured_logger.py
services/generation-service/src/generation_service/middleware/: __init__.py  security_middleware.py
services/generation-service/src/generation_service/models/: __init__.py  generation.py  memory.py  rag_jobs.py  rag_models.py  sse_models.py  vector_document.py
services/generation-service/src/models/: __init__.py
services/generation-service/src/rag/: __init__.py
services/generation-service/tests/: __init__.py  test_api_endpoints.py  test_durable_rag_workers.py  test_error_scenarios.py  test_memory_edge_cases.py  test_monitoring.py  test_provider_factory_lazy_loading.py  test_specialized_agents.py
services/generation-service/tests/integration/: __init__.py  test_integration.py
services/generation-service/tests/performance/: __init__.py  load_tester.py  performance_validator.py
services/project-service/: .env.example  CHROMA_EPISODES_API.md  Dockerfile  README.md  pyproject.toml  requirements.txt  test_api_integration.py  test_atomic_episode_creation.py  test_chroma_episodes.py  test_commit_system.py  test_delete_system.py  test_high_concurrency.py
services/project-service/migrations/: 001_add_next_episode_number.py  002_add_episode_number.py
services/project-service/src/project_service/: __init__.py  main.py
services/project-service/tests/: test_analytics_api.py
shared/core/: CHANGELOG.md  README.md  RELEASE_CHECKLIST.md  __init__.py  claude.md  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  setup.py  test_install.sh
shared/core/.github/workflows/: ci.yml
shared/core/scripts/: build_test.sh  lint.sh  runtime_test.py  validate_production.sh  version_bump.py
shared/core/src/: __init__.py
shared/core/src/ai_script_core/: __init__.py  py.typed
shared/core/tests/: __init__.py  test_api_surface.py  test_core.py  test_exceptions.py  test_installation.py  test_schemas.py  test_utils.py
(+360 files in other folders)
