[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-script-project-service"
version = "0.1.0"
description = "Project Service for AI Script Generator - Manages projects, episodes, and metadata"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "AI Script Generator Team", email = "team@aiscriptgen.com" }
]
maintainers = [
    { name = "AI Script Generator Team", email = "team@aiscriptgen.com" }
]
keywords = ["ai", "script", "project-management", "microservice", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy==2.0.25",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "ai-script-core>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

testing = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "factory-boy>=3.3.0",
    "faker>=19.0.0",
]

[project.urls]
Homepage = "https://github.com/ai-script-generator/ai-script-generator-v3"
Documentation = "https://github.com/ai-script-generator/ai-script-generator-v3/tree/main/services/project-service"
Repository = "https://github.com/ai-script-generator/ai-script-generator-v3"
"Bug Tracker" = "https://github.com/ai-script-generator/ai-script-generator-v3/issues"

[project.scripts]
typecheck = "mypy src --strict"
"typecheck:watch" = "watchdog-run --patterns='*.py' --recursive --command='mypy src --strict' src"
build = "mypy src --strict && python -m build"
lint = "ruff check src"
"lint:fix" = "ruff check --fix src && ruff format src"
format = "ruff format src"
"format:check" = "ruff format --check src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["project_service*"]

[tool.setuptools.package-data]
"project_service" = ["py.typed"]

# Ruff configuration - unified with other services
[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["project_service", "ai_script_core"]

[tool.mypy]
python_version = "3.10"
# Strictness - Maximum type safety
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true
disallow_any_expr = false  # Too strict for FastAPI dependencies
disallow_any_decorated = false  # FastAPI decorators need this
disallow_any_explicit = false  # Allowing explicit Any for logging/exceptions metadata
disallow_any_generics = true
disallow_subclassing_any = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true
# Additional strict checks
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
extra_checks = true
# Exclude test files from strictest checks
exclude = [
    "tests/.*",
    "test_.*\\.py$"
]

[[tool.mypy.overrides]]
module = [
    "uvicorn.*",
    "alembic.*",
    "psycopg2.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
